# AIHackScheduler

./: .env.example  .replit  README.md  app.py  config.py  extensions.py  models.py  pyproject.toml  replit.md  routes.py
admin/: __init__.py  user_management.py
analytics/: __init__.py  advanced_analytics.py
audit/: __init__.py  audit_logger.py
azure_ai/: predictive_analytics.py
blueprints/: admin.py  auth.py  azure_integration.py  equipment_management.py  financial_management.py  powerbi_integration.py  project_management.py  project_templates.py  projects.py  reports.py  scheduling.py
caching/: __init__.py  cache_manager.py
collaboration/: real_time.py
config/: __init__.py  production.py
database/: __init__.py  optimizations.py
deployment/: Dockerfile  __init__.py  azure-deploy.yml  docker-compose.yml  requirements.txt
models/: equipment.py
monitoring/: __init__.py  health_checks.py
reports/: executive_dashboard.py
security/: __init__.py  rate_limiting.py
services/: azure_ai.py  fabric_service.py  foundry_service.py  schedule_optimizer.py
static/css/: custom.css  mobile.css
static/js/: dashboard.js  gantt-chart.js  linear-schedule.js  project-management.js  pull-planning.js  sw.js
tasks/: __init__.py  background_tasks.py  celery_config.py
templates/: base.html  index.html  offline.html
templates/admin/: create_user.html  dashboard.html  integrations.html  users.html
templates/analytics/: dashboard.html
templates/auth/: login.html  register.html
templates/collaboration/: project_chat.html
templates/enterprise/: dashboard.html
(+18 files in other folders)
