[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "email-validator>=2.3.0",
    "flask-dance>=7.1.0",
    "flask>=3.1.2",
    "flask-sqlalchemy>=3.1.1",
    "gunicorn>=23.0.0",
    "psycopg2-binary>=2.9.10",
    "flask-login>=0.6.3",
    "oauthlib>=3.3.1",
    "pyjwt>=2.10.1",
    "azure-core>=1.35.0",
    "azure-identity>=1.24.0",
    "azure-storage-blob>=12.26.0",
    "python-dateutil>=2.9.0.post0",
    "numpy>=2.3.2",
    "werkzeug>=3.1.3",
    "python-dotenv>=1.1.1",
    "flask-wtf>=1.2.2",
    "redis>=6.4.0",
    "sqlalchemy>=2.0.43",
    "flask-migrate>=4.1.0",
    "celery>=5.5.3",
    "requests>=2.32.5",
    "openpyxl>=3.1.5",
    "openai>=1.106.1",
    "flask-limiter>=3.12",
    "flask-caching>=2.3.1",
    "flask-talisman>=1.1.0",
    "psutil>=7.0.0",
]
